--- a/_config.yml
+++ b/_config.yml
@@ -29,6 +29,10 @@ languages:
 #remote_theme: open-sdg/open-sdg@1.1.0
 remote_theme: brockfanning/open-sdg@alternate-unit-and-series-columns
 
+data_fields:
+  series: SERIES
+  units: UNIT_MEASURE
+
 # Replace this title as needed.
 title: Indicators For The Sustainable Development Goals
 url: ""
