--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ languages:
 # Tell the Remote Theme plugin to use the Open SDG platform (Jekyll theme).
 # Recommended: set this to a particular "release" of Open SDG. For example:
 #remote_theme: open-sdg/open-sdg@1.1.0
-remote_theme: brockfanning/open-sdg@1.2.0-beta2
+remote_theme: open-sdg/open-sdg@1.2.0-beta2
 
 data_fields:
   series: SERIES
