--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ remote_theme: open-sdg/open-sdg@1.2.0-beta2
 # Replace this title as needed.
 title: Indicators For The Sustainable Development Goals
 url: ""
-
+baseurl: "site"
 
 # Pages
 collections:
